made circuit breaker configurable, e.g., allowed the retry threshold to be set in a config file.

--- a/config/runtime.cfg
+++ b/config/runtime.cfg
@@ -1,9 +1,11 @@
 twitter.screenname=none
 twitter.password  =none
 
-file.keywords=demodetect/config/keywords.cfg
-dir.output   =demodetect/twitter/output/
+file.keywords=config/keywords.cfg
+dir.output   =output/
 max.tweets.per.file=500
 random.sample.of.size=3
 max.tweets.extract=500
 #file.users=config/users
+circuit.breaker.retry.threshold=900000
+circuit.breaker.failed.call.threshold=1
