bug fixes related to Circuit Breaker, TwitterEnvironment, and much more.

--- a/config/runtime.cfg
+++ b/config/runtime.cfg
@@ -2,10 +2,11 @@ twitter.screenname=none
 twitter.password  =none
 
 file.keywords=config/keywords.cfg
-dir.output   =output/
+dir.output   =output
 max.tweets.per.file=500
 random.sample.of.size=3
 max.tweets.extract=500
 #file.users=config/users
-circuit.breaker.retry.threshold=900000
+circuit.breaker.retry.threshold=900000000000
 circuit.breaker.failed.call.threshold=1
+circuit.breaker.debug=false
